<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_configuration"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_configuration">
    	<menu>
        	<item 
		        android:id="@+id/action_boussole"
        		android:title="@string/action_bousole">
		    	<menu>
    		    	<item 
		    		    android:id="@+id/action_altitude"
        				android:title="@string/action_altitude"/>
		        	<item 
		    		    android:id="@+id/action_chrono"
        				android:title="@string/action_chrono"/>
		   			<item 
		    		    android:id="@+id/action_cap"
        				android:title="@string/action_cap"/>
		   			<item 
		    		    android:id="@+id/action_ecart_lateral"
        				android:title="@string/action_ecart_lateral"/>
		   			<item 
		    		    android:id="@+id/action_route"
        				android:title="@string/action_route"/>
        			<item 
        			    android:id="@+id/action_BousoleIntC1"
              			android:title="@string/action_BousoleIntC1" />
        			<item 
        			    android:id="@+id/action_BousoleIntC2"
              			android:title="@string/action_BousoleIntC2" />
        			<item 
        			    android:id="@+id/action_BousoleIntC3"
              			android:title="@string/action_BousoleIntC3" />
    			</menu>    
        	</item>
        	<item 
		        android:id="@+id/action_general"
        		android:title="@string/action_general">
        		<item 
		        	android:id="@+id/action_case_coche"
        			android:title="@string/action_case_coche">
		    		<menu>
    		    		<item 
		    		    	android:id="@+id/action_Vth"
	        				android:title="@string/sVth"/>
			        	<item 
			    		    android:id="@+id/action_VP"
        					android:title="@string/sVP"/>
		   				<item 
		    			    android:id="@+id/action_Logger"
        					android:title="@string/sLogger"/>
			   			<item 
			    		    android:id="@+id/action_SC"
        					android:title="@string/sSC"/>
		   				<item 
		    			    android:id="@+id/action_X5"
        					android:title="@string/sX5"/>
		   				<item 
		    			    android:id="@+id/action_Chrono"
        					android:title="@string/sChrono"/>
		   			</menu>    
        	    </item>
        		<item 
		        	android:id="@+id/action_valeur"
        			android:title="@string/action_valeur">
		    		<menu>
    		    		<item 
		    		    	android:id="@+id/action_PT"
	        				android:title="@string/action_PT"/>
    		    		<item 
		    		    	android:id="@+id/action_Rv"
	        				android:title="@string/action_Rv"/>
    		    		<item 
		    		    	android:id="@+id/action_Hpt"
	        				android:title="@string/action_Hpt"/>
    		    		<item 
		    		    	android:id="@+id/action_Hgps"
	        				android:title="@string/action_Hgps"/>
    		    		<item 
		    		    	android:id="@+id/action_PrefixHgps"
	        				android:title="@string/action_PrefixHgps"/>
    		    		<item 
		    		    	android:id="@+id/action_Rw"
	        				android:title="@string/action_Rw"/>
    		    		<item 
		    		    	android:id="@+id/action_WKT"
	        				android:title="@string/action_WKT"/>
    		    		<item 
		    		    	android:id="@+id/action_Hsc"
	        				android:title="@string/action_Hsc"/>
    		    		<item 
		    		    	android:id="@+id/action_PTS"
	        				android:title="@string/action_PTS"/>
    		    		<item 
		    		    	android:id="@+id/action_VentCap"
	        				android:title="@string/action_VentCap"/>
    		    		<item 
		    		    	android:id="@+id/action_VentVitesse"
	        				android:title="@string/action_VentVitesse"/>
    		    		<item 
		    		    	android:id="@+id/action_Cap"
	        				android:title="@string/action_Cap"/>
    		    		<item 
		    		    	android:id="@+id/action_Vitesse"
	        				android:title="@string/action_Vitesse"/>
		   			</menu>    
		   	    </item>
        	</item>
    	</menu>    
	</item>
</menu>